--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
+                        <a href="pages/card.html">Cards</a>
+                    </li>
+                    <li class="menu_link">
                         <a href="https://t.me/nurdinbuy16" target="_blank">Send message</a>
                     </li>
+                    
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
             </div>
