--- a/pages/card.html
+++ b/pages/card.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Monster</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/core.css">
-    <link rel="stylesheet" href="../css/monster.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Monster</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/card.css">
+        <link rel="stylesheet" href="../css/core.css">
+
+    </head>
 <body>
-<div class="wrapper">
     <div class="header">
         <div class="container">
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
                         <h2>Java<span>Script</span></h2>
-                    </div>
+                    </div> 
                 </a>
                 <ul class="menu">
                     <li class="menu_link">
@@ -35,24 +35,22 @@
             </div>
         </div>
     </div>
-</div>
-<canvas id="canvas"></canvas>
 
-<div class="modal">
-    <div class="modal_dialog">
-        <div class="modal_content">
-            <form action="#">
-                <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
-            </form>
+    <div class="main">
+        <div class="render_card">
+
         </div>
     </div>
-</div>
 
+    <div class="footer">
+        <div class="container">
+            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+                <div class="inner_footer">
+                    <h2>Made by NurDinBuy</h2>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
-<script src="../js/monster.js"></script>
-<script src="../js/modal.js"></script>
+<script src="../js/card.js"></script>
 </html>
