--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -26,6 +26,9 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
+                        <a href="../pages/card.html">Cards</a>
+                    </li>
+                    <li class="menu_link">
                         <a href="https://t.me/NurDinBuy16" target="_blank">Send message</a>
                     </li>
                 </ul>
@@ -47,7 +50,7 @@
             </div>
         </div>
     </div>
-
+    
     <div class="move_block">
         <div class="container">
             <h3>Home work 1 (part 2)</h3>
